--- a/echo-control/.env.example
+++ b/echo-control/.env.example
@@ -10,7 +10,7 @@ API_KEY_PREFIX="echo_"
 # Database
 # ----------
 
-DATABASE_URL="postgresql://echo_user:echo_password@localhost:5469/echo_control?schema=public"
+DATABASE_URL="postgresql://echo_user:echo_password@localhost:5469/echo_control_v2?schema=public"
 
 # ----------
 # AUTH
@@ -23,7 +23,7 @@ AUTH_SECRET=
 AUTH_GOOGLE_ID=
 AUTH_GOOGLE_SECRET=
 
-# Github Provider - https://authjs.dev/getting-started/providers/github
+# Github Provider - https://authjs.dev/getting-started/providers/github - https://github.com/settings/developers
 AUTH_GITHUB_ID=
 AUTH_GITHUB_SECRET=
 
