--- a/echo-server/package.json
+++ b/echo-server/package.json
@@ -84,6 +84,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.5.2",
     "supertest": "^6.3.4",
+    "tsx": "^4.20.5",
     "vitest": "^3.2.3"
   }
 }
