--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "private": true,
   "packageManager": "pnpm@10.11.0",
   "scripts": {
-    "dev": "pnpm run --recursive dev",
+    "dev": "pnpm run --filter=echo-control --filter=echo-server --parallel dev",
     "build": "pnpm run --recursive build",
     "build:server": "cd echo-server && pnpm run build && cd ..",
     "start:server": "cd echo-server && pnpm run start",
     "test": "pnpm run --recursive test",
     "test:unit": "cd echo-typescript-sdk && pnpm run build && cd .. && pnpm run --recursive --filter=!echo-server test:unit",
     "test:integration": "cd integration-tests && pnpm test",
-    "test:integration:watch": "cd integration-tests && pnpm test:watch",
     "test:all": "pnpm run test:unit && pnpm run test:integration",
     "lint": "pnpm run --recursive lint",
     "lint:fix": "pnpm run --recursive lint:fix",
