generate prisma on dev

--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "predev": "docker-compose -f docker-local-db.yml up -d && sleep 3",
+    "predev": "docker-compose -f docker-local-db.yml up -d && sleep 3 && prisma generate",
     "dev": "next dev --turbopack",
     "prebuild": "prisma generate",
     "build": "next build",
