--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -107,6 +107,7 @@
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
+    "ts-morph": "^27.0.0",
     "viem": "^2.33.3",
     "x402-next": "^0.5.0",
     "zod": "^4.0.15"
