--- a/echo-server/package.json
+++ b/echo-server/package.json
@@ -19,6 +19,7 @@
     "anthropic-gpt-client": "npx tsx src/clients/anthropic-gpt-client.ts",
     "gemini-client": "npx tsx src/clients/gemini-client.ts",
     "gemini-gpt-client": "npx tsx src/clients/gemini-gpt-client.ts",
+    "veo3-client": "npx tsx src/clients/veo3-client.ts",
     "openai-client": "npx tsx src/clients/gpt-client.ts",
     "openrouter-client": "npx tsx src/clients/openrouter-client.ts",
     "openai-image-formdata-client": "npx tsx src/clients/openai-image-formdata-client.ts",
@@ -40,7 +41,7 @@
   "license": "ISC",
   "dependencies": {
     "@coinbase/cdp-sdk": "^1.34.0",
-    "@merit-systems/echo-typescript-sdk": "1.0.14",
+    "@merit-systems/echo-typescript-sdk": "workspace:*",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/api-logs": "0.57.2",
     "@opentelemetry/auto-instrumentations-node": "^0.57.0",
@@ -76,7 +77,7 @@
   },
   "devDependencies": {
     "@anthropic-ai/sdk": "^0.39.0",
-    "@google/genai": "^0.3.0",
+    "@google/genai": "^1.17.0",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
