--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -33,6 +33,7 @@ ARG OTEL_NODE_RESOURCE_DETECTORS
 ARG OTEL_TRACES_EXPORTER
 ARG OTEL_LOG_LEVEL
 ARG PORT
+ARG AUTH_RESEND_KEY
 
 # Set environment variables from build arguments
 ENV DATABASE_URL=$DATABASE_URL
@@ -60,6 +61,7 @@ ENV OTEL_NODE_RESOURCE_DETECTORS=$OTEL_NODE_RESOURCE_DETECTORS
 ENV OTEL_TRACES_EXPORTER=$OTEL_TRACES_EXPORTER
 ENV OTEL_LOG_LEVEL=$OTEL_LOG_LEVEL
 ENV PORT=$PORT
+ENV AUTH_RESEND_KEY=$AUTH_RESEND_KEY
 
 # Install system dependencies
 RUN apk add --no-cache \
