--- a/echo-server/package.json
+++ b/echo-server/package.json
@@ -51,7 +51,6 @@
     "@opentelemetry/sdk-metrics": "2.0.1",
     "@opentelemetry/semantic-conventions": "^1.36.0",
     "@opentelemetry/winston-transport": "^0.14.1",
-    "@prisma/client": "^6.8.2",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
@@ -66,7 +65,8 @@
     "multer": "^2.0.2",
     "node-fetch": "^2.7.0",
     "openai": "^4.97.0",
-    "prisma": "^6.8.2",
+    "@prisma/client": "6.16.0",
+    "prisma": "6.16.0",
     "register": "link:@opentelemetry/auto-instrumentations-node/register",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
