--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -40,6 +40,8 @@
     "@opentelemetry/sdk-logs": "0.57.2",
     "@opentelemetry/sdk-metrics": "1.26.0",
     "@opentelemetry/sdk-trace-base": "1.26.0",
+    "@prisma/client": "6.16.0",
+    "@prisma/nextjs-monorepo-workaround-plugin": "6.16.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -89,8 +91,6 @@
     "octokit": "^5.0.3",
     "postcss": "^8.5.4",
     "posthog-js": "^1.260.3",
-    "@prisma/client": "6.16.0",
-    "@prisma/nextjs-monorepo-workaround-plugin": "6.16.0",
     "prisma": "6.16.0",
     "react": "19.1.1",
     "react-day-picker": "^9.9.0",
@@ -102,6 +102,7 @@
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
     "remark-mdx": "^3.1.0",
+    "resend": "^6.0.3",
     "server-only": "^0.0.1",
     "shiki": "^3.11.0",
     "sonner": "^2.0.7",
