--- a/examples/vite/package.json
+++ b/examples/vite/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite",
+  "name": "echo-vite-template",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@merit-systems/echo-react-sdk": "workspace:*",
+    "@merit-systems/echo-react-sdk": "1.0.20",
     "ai": "^5.0.20",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
