--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -55,6 +55,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@react-email/render": "^1.2.3",
     "@shikijs/core": "^3.11.0",
     "@shikijs/engine-javascript": "^3.11.0",
     "@shikijs/langs": "^3.11.0",
