--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ out/
 .env.development.local
 .env.test.local
 .env.production.local
+# Allow .env.local in examples directory
+!/examples/**/.env.local
 
 # Testing
 coverage/
