include examples in workspace

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -6,6 +6,7 @@ packages:
   - echo-react-sdk
   - echo-authjs-provider
   - integration-tests
+  - examples/*
   - smoke/**
 allowBuiltDependencies:
   - '@prisma/client'
