--- a/examples/nextjs-chatbot/package.json
+++ b/examples/nextjs-chatbot/package.json
@@ -36,7 +36,7 @@
     "zod": "^4.1.5"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.2.4",
+    "@eslint/eslintrc": "^3",
     "@next/eslint-plugin-next": "^15.5.3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
