--- a/echo-control/package.json
+++ b/echo-control/package.json
@@ -61,6 +61,7 @@
     "@shikijs/langs": "^3.12.2",
     "@shikijs/themes": "^3.12.2",
     "@shikijs/types": "^3.12.2",
+    "@t3-oss/env-nextjs": "^0.13.8",
     "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-query": "^5.84.1",
     "@trpc/client": "^11.4.4",
