--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -80,25 +80,25 @@ COPY packages/app/control/ ./packages/app/control/
 COPY packages/app/server/ ./packages/app/server/
 COPY packages/sdk/ts/ ./packages/sdk/ts/
 COPY packages/sdk/next/ ./packages/sdk/next/
-COPY echo-react-sdk/ ./echo-react-sdk/
+COPY packages/sdk/react/ ./packages/sdk/react/
 
 # Install dependencies for both projects (including dev dependencies for build)
-WORKDIR /app/echo-control
+WORKDIR /app/packages/app/control
 RUN pnpm install
 
-WORKDIR /app/echo-server
+WORKDIR /app/packages/app/server
 RUN pnpm install
 
 # Step 1: Build echo-control and generate Prisma client
-WORKDIR /app/echo-control
+WORKDIR /app/packages/app/control
 RUN pnpm run prisma:generate
 RUN pnpm run build
 
-WORKDIR /app/echo-typescript-sdk
+WORKDIR /app/packages/sdk/ts
 RUN pnpm install
 RUN pnpm run build
 
-WORKDIR /app/echo-server
+WORKDIR /app/packages/app/server
 RUN pnpm run copy-prisma
 
 # Step 3: Build echo-server
