--- a/packages/sdk/examples/next/package.json
+++ b/packages/sdk/examples/next/package.json
@@ -12,7 +12,7 @@
     "@ai-sdk/openai": "^2.0.16",
     "@ai-sdk/react": "^2.0.17",
     "@ai-sdk/rsc": "^1.0.18",
-    "@merit-systems/echo-next-sdk": "0.0.9",
+    "@merit-systems/echo-next-sdk": "workspace:*",
     "ai": "^5.0.17",
     "next": "15.4.7",
     "react": "19.1.0",
