update all github for new paths

--- a/.github/workflows/migrate-db.yml
+++ b/.github/workflows/migrate-db.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches: [master, production]
     paths:
-      - 'echo-control/prisma/**'
+      - 'packages/app/control/prisma/**'
 
 jobs:
   migrate-staging:
@@ -29,11 +29,11 @@ jobs:
       
       - name: Install dependencies
         run: pnpm install --frozen-lockfile --filter echo-control
-        working-directory: ./echo-control
+        working-directory: ./packages/app/control
       
       - name: Run Prisma migrate deploy (Staging)
         run: pnpm run prisma:migrate-deploy
-        working-directory: ./echo-control
+        working-directory: ./packages/app/control
         env:
           DATABASE_URL: ${{ secrets.STAGING_DB_URL }}
 
@@ -58,10 +58,10 @@ jobs:
       
       - name: Install dependencies
         run: pnpm install --frozen-lockfile --filter echo-control
-        working-directory: ./echo-control
+        working-directory: ./packages/app/control
       
       - name: Run Prisma migrate deploy (Production)
         run: pnpm run prisma:migrate-deploy
-        working-directory: ./echo-control
+        working-directory: ./packages/app/control
         env:
           DATABASE_URL: ${{ secrets.PRODUCTION_DB_URL }}
