--- a/.github/workflows/publish-sdks.yml
+++ b/.github/workflows/publish-sdks.yml
@@ -20,6 +20,7 @@ jobs:
       typescript-published: ${{ steps.publish-typescript.outputs.published }}
       react-published: ${{ steps.publish-react.outputs.published }}
       next-published: ${{ steps.publish-next.outputs.published }}
+      echo-start-published: ${{ steps.publish-echo-start.outputs.published }}
       version: ${{ steps.get-version.outputs.version }}
 
     steps:
@@ -183,11 +184,55 @@ jobs:
             echo "✅ Successfully published $PACKAGE_NAME"
           fi
 
+      # Echo Start CLI
+      - name: Build Echo Start CLI
+        working-directory: ./packages/sdk/echo-start
+        run: |
+          echo "🔨 Building Echo Start CLI..."
+          pnpm run build
+          echo "✅ Echo Start CLI built"
+
+      - name: Test Echo Start CLI
+        working-directory: ./packages/sdk/echo-start
+        run: |
+          echo "🧪 Testing Echo Start CLI..."
+          pnpm run type-check
+          pnpm run lint
+          echo "✅ Echo Start CLI tests passed"
+
+      - name: Check and publish Echo Start CLI
+        id: publish-echo-start
+        working-directory: ./packages/sdk/echo-start
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: |
+          PACKAGE_NAME=$(node -p "require('./package.json').name")
+          PACKAGE_VERSION=$(node -p "require('./package.json').version")
+          FORCE_PUBLISH="${{ github.event.inputs.force_publish }}"
+
+          if npm view "$PACKAGE_NAME@$PACKAGE_VERSION" version 2>/dev/null; then
+            if [ "$FORCE_PUBLISH" = "true" ]; then
+              echo "⚠️  Version $PACKAGE_VERSION of $PACKAGE_NAME already exists on npm, but force_publish is enabled"
+              echo "🚀 Publishing $PACKAGE_NAME to npm..."
+              npm publish --access public
+              echo "published=true" >> $GITHUB_OUTPUT
+              echo "✅ Successfully published $PACKAGE_NAME"
+            else
+              echo "❌ Version $PACKAGE_VERSION of $PACKAGE_NAME already exists on npm - skipping"
+              echo "published=false" >> $GITHUB_OUTPUT
+            fi
+          else
+            echo "🚀 Publishing $PACKAGE_NAME to npm..."
+            npm publish --access public
+            echo "published=true" >> $GITHUB_OUTPUT
+            echo "✅ Successfully published $PACKAGE_NAME"
+          fi
+
   create-tag:
     name: Create version tag
     runs-on: ubuntu-latest
     needs: publish
-    if: (needs.publish.outputs.typescript-published == 'true' || needs.publish.outputs.react-published == 'true' || needs.publish.outputs.next-published == 'true') && github.ref == 'refs/heads/production' && !startsWith(github.ref, 'refs/tags/')
+    if: (needs.publish.outputs.typescript-published == 'true' || needs.publish.outputs.react-published == 'true' || needs.publish.outputs.next-published == 'true' || needs.publish.outputs.echo-start-published == 'true') && github.ref == 'refs/heads/production' && !startsWith(github.ref, 'refs/tags/')
 
     steps:
       - name: Checkout code
@@ -248,12 +293,14 @@ jobs:
             - \`@merit-systems/echo-typescript-sdk\`
             - \`@merit-systems/echo-react-sdk\`
             - \`@merit-systems/echo-next-sdk\`
+            - \`echo-start\` (CLI tool)
 
             ### Installation
             \`\`\`bash
             npm install @merit-systems/echo-typescript-sdk
             npm install @merit-systems/echo-react-sdk
             npm install @merit-systems/echo-next-sdk
+            npm install -g echo-start
             \`\`\`
 
             This tag was automatically created after successful npm publishing from the production branch.
