--- a/.github/workflows/test-publish.yml
+++ b/.github/workflows/test-publish.yml
@@ -7,6 +7,7 @@ on:
       - 'packages/sdk/ts/**'
       - 'packages/sdk/react/**'
       - 'packages/sdk/next/**'
+      - 'packages/sdk/echo-start/**'
       - '.github/workflows/publish-sdks.yml'
       - '.github/workflows/test-publish.yml'
       - 'pnpm-lock.yaml'
@@ -16,6 +17,7 @@ on:
       - 'packages/sdk/ts/**'
       - 'packages/sdk/react/**'
       - 'packages/sdk/next/**'
+      - 'packages/sdk/echo-start/**'
       - '.github/workflows/publish-sdks.yml'
       - '.github/workflows/test-publish.yml'
 
@@ -27,9 +29,11 @@ jobs:
       typescript-ready: ${{ steps.test-typescript.outputs.ready }}
       react-ready: ${{ steps.test-react.outputs.ready }}
       next-ready: ${{ steps.test-next.outputs.ready }}
+      echo-start-ready: ${{ steps.test-echo-start.outputs.ready }}
       typescript-version: ${{ steps.get-versions.outputs.typescript-version }}
       react-version: ${{ steps.get-versions.outputs.react-version }}
       next-version: ${{ steps.get-versions.outputs.next-version }}
+      echo-start-version: ${{ steps.get-versions.outputs.echo-start-version }}
 
     steps:
       - name: Checkout code
@@ -56,12 +60,15 @@ jobs:
           TS_VERSION=$(node -p "require('./packages/sdk/ts/package.json').version")
           REACT_VERSION=$(node -p "require('./packages/sdk/react/package.json').version")
           NEXT_VERSION=$(node -p "require('./packages/sdk/next/package.json').version")
+          ECHO_START_VERSION=$(node -p "require('./packages/sdk/echo-start/package.json').version")
           echo "typescript-version=$TS_VERSION" >> $GITHUB_OUTPUT
           echo "react-version=$REACT_VERSION" >> $GITHUB_OUTPUT
           echo "next-version=$NEXT_VERSION" >> $GITHUB_OUTPUT
+          echo "echo-start-version=$ECHO_START_VERSION" >> $GITHUB_OUTPUT
           echo "📦 TypeScript SDK: v$TS_VERSION"
           echo "📦 React SDK: v$REACT_VERSION"
           echo "📦 Next.js SDK: v$NEXT_VERSION"
+          echo "📦 Echo Start CLI: v$ECHO_START_VERSION"
 
       # TypeScript SDK Tests
       - name: Check TypeScript SDK configuration
@@ -268,3 +275,70 @@ jobs:
 
           echo "ready=true" >> $GITHUB_OUTPUT
           echo "✅ Next.js SDK is ready for publishing"
+
+      # Echo Start CLI Tests
+      - name: Check Echo Start CLI configuration
+        working-directory: ./packages/sdk/echo-start
+        run: |
+          echo "🔍 Checking Echo Start CLI configuration..."
+          PACKAGE_NAME=$(node -p "require('./package.json').name")
+          echo "Name: $PACKAGE_NAME"
+
+          # Check if package.json has required fields for publishing
+          if [ "$(node -p "require('./package.json').private || false")" = "true" ]; then
+            echo "❌ Package is marked as private - cannot publish"
+            exit 1
+          fi
+
+          if [ -z "$PACKAGE_NAME" ]; then
+            echo "❌ Package name is missing"
+            exit 1
+          fi
+
+          echo "✅ Echo Start CLI configuration looks good"
+
+      - name: Build and test Echo Start CLI
+        id: test-echo-start
+        working-directory: ./packages/sdk/echo-start
+        run: |
+          echo "🔨 Building Echo Start CLI..."
+          pnpm run build
+
+          echo "🔍 Type checking Echo Start CLI..."
+          pnpm run type-check
+
+          echo "📁 Checking build output..."
+          if [ ! -d "dist" ]; then
+            echo "❌ dist directory not found"
+            exit 1
+          fi
+
+          # Check for main files
+          MAIN_FILE=$(node -p "require('./package.json').main")
+          BIN_FILE=$(node -p "require('./package.json').bin['echo-start']")
+
+          if [ ! -z "$MAIN_FILE" ] && [ ! -f "$MAIN_FILE" ]; then
+            echo "❌ Main file not found: $MAIN_FILE"
+            exit 1
+          fi
+
+          if [ ! -z "$BIN_FILE" ] && [ ! -f "$BIN_FILE" ]; then
+            echo "❌ Binary file not found: $BIN_FILE"
+            exit 1
+          fi
+
+          echo "📏 Checking dist size..."
+          du -sh dist || true
+
+          echo "🔍 Simulating version check..."
+          PACKAGE_NAME=$(node -p "require('./package.json').name")
+          PACKAGE_VERSION=$(node -p "require('./package.json').version")
+
+          if npm view "$PACKAGE_NAME@$PACKAGE_VERSION" version 2>/dev/null; then
+            echo "⚠️  Version $PACKAGE_VERSION already exists on npm"
+          else
+            echo "✅ Version $PACKAGE_VERSION does not exist - would be published"
+          fi
+
+          echo "ready=true" >> $GITHUB_OUTPUT
+          echo "✅ Echo Start CLI is ready for publishing"
