--- a/packages/app/control/package.json
+++ b/packages/app/control/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "predev": "docker-compose -f docker-local-db.yml up -d && sleep 3 && prisma generate && prisma migrate deploy",
     "dev": "next dev --turbopack",
-    "prebuild": "prisma generate",
+    "prebuild": "prisma generate && npm run generate-api-types",
     "build": "next build",
+    "generate-api-types": "tsx scripts/generate-api-types.ts",
     "start": "next start",
     "lint": "eslint .",
     "setup-webhook": "node scripts/setup-webhook.js",
