--- a/packages/sdk/ts/package.json
+++ b/packages/sdk/ts/package.json
@@ -14,7 +14,7 @@
     }
   },
   "scripts": {
-    "build": "tsup",
+    "build": "npm run generate-api-types && tsup",
     "dev": "tsup --watch",
     "lint": "pnpx eslint src/**/*.ts",
     "lint:fix": "pnpx eslint src/**/*.ts --fix",
@@ -23,6 +23,7 @@
     "test": "vitest run",
     "test:unit": "vitest run",
     "test:watch": "vitest --watch",
+    "generate-api-types": "tsx scripts/generate-api-types.ts && pnpm format",
     "update-models:openai": "tsx scripts/update-openai-models.ts",
     "update-models:anthropic": "tsx scripts/update-anthropic-models.ts",
     "update-models:gemini": "tsx scripts/update-gemini-models.ts",
