--- a/packages/sdk/next/package.json
+++ b/packages/sdk/next/package.json
@@ -38,11 +38,22 @@
   "license": "MIT",
   "dependencies": {
     "@merit-systems/echo-typescript-sdk": "1.0.14",
+
+
+
+
+    "@merit-systems/echo-react-sdk": "workspace:*",
+
+
+
+
     "ai": "^5.0.17",
     "jwt-decode": "^4.0.0"
   },
   "peerDependencies": {
-    "next": ">=15.0.0"
+    "next": ">=15.0.0",
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0"
   },
   "devDependencies": {
     "@types/node": "^24.0.3",
@@ -52,7 +63,11 @@
     "next": "^15.1.4",
     "tsup": "^8.5.0",
     "typescript": "^5.8.3",
-    "vitest": "^3.2.3"
+    "vitest": "^3.2.3",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7"
   },
   "files": [
     "dist/**/*"
