--- a/packages/sdk/next/tsconfig.json
+++ b/packages/sdk/next/tsconfig.json
@@ -3,8 +3,9 @@
   "compilerOptions": {
     "rootDir": "./src",
     "baseUrl": "./src",
-    "types": ["node", "vitest/globals"],
-    "lib": ["ES2022", "DOM", "DOM.Iterable"]
+    "types": ["node", "vitest/globals", "react", "react-dom"],
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "jsx": "react-jsx"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "__tests__/**/*"]
