--- a/packages/app/control/package.json
+++ b/packages/app/control/package.json
@@ -63,6 +63,7 @@
     "@shikijs/types": "^3.12.2",
     "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-query": "^5.84.1",
+    "@tanstack/react-table": "^8.21.3",
     "@trpc/client": "^11.4.4",
     "@trpc/react-query": "^11.4.4",
     "@trpc/server": "^11.4.4",
