export /advanced/EchoProviderRaw; rm refresh memoization; next-sdk EchoProvider

--- a/packages/sdk/next/tsconfig.json
+++ b/packages/sdk/next/tsconfig.json
@@ -5,7 +5,9 @@
     "baseUrl": "./src",
     "types": ["node", "vitest/globals", "react", "react-dom"],
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "module": "ESNext",
+    "moduleResolution": "bundler"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "__tests__/**/*"]
