--- a/packages/sdk/react/package.json
+++ b/packages/sdk/react/package.json
@@ -69,7 +69,8 @@
     "ai": "^5.0.19",
     "dompurify": "^3.2.6",
     "oidc-client-ts": "^3.2.1",
-    "react-oidc-context": "^3.3.0"
+    "react-oidc-context": "^3.3.0",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@storybook/addon-docs": "^9.0.10",
