--- a/packages/sdk/next/package.json
+++ b/packages/sdk/next/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@merit-systems/echo-next-sdk",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "Next.js SDK for Echo",
   "type": "module",
   "main": "./dist/index.js",
@@ -38,7 +38,7 @@
   "license": "MIT",
   "dependencies": {
     "@merit-systems/echo-typescript-sdk": "1.0.14",
-    "@merit-systems/echo-react-sdk": "workspace:*",
+    "@merit-systems/echo-react-sdk": "1.0.21",
     "ai": "^5.0.17",
     "jwt-decode": "^4.0.0",
     "swr": "^2.2.4"
