--- a/templates/react/package.json
+++ b/templates/react/package.json
@@ -10,10 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@merit-systems/echo-react-sdk": "1.0.20",
+    "@merit-systems/echo-react-sdk": "1.0.24",
     "ai": "^5.0.20",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "use-sync-external-store": "^1.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
