--- a/templates/next/package.json
+++ b/templates/next/package.json
@@ -12,7 +12,7 @@
     "@ai-sdk/openai": "^2.0.16",
     "@ai-sdk/react": "^2.0.17",
     "@ai-sdk/rsc": "^1.0.18",
-    "@merit-systems/echo-next-sdk": "0.0.10",
+    "@merit-systems/echo-next-sdk": "0.0.14",
     "ai": "^5.0.17",
     "next": "15.4.7",
     "react": "19.1.0",
@@ -22,7 +22,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/react": "19.1.10",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.7",
