--- a/templates/next-image/package.json
+++ b/templates/next-image/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.16",
-    "@merit-systems/echo-next-sdk": "0.0.18",
+    "@merit-systems/echo-next-sdk": "0.0.19",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-select": "^2.2.6",
@@ -21,6 +21,7 @@
     "lucide-react": "^0.263.1",
     "nanoid": "^5.1.5",
     "next": "15.4.7",
+    "openai": "^5.20.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^2.6.0"
