--- a/.github/workflows/template-env-check.yml
+++ b/.github/workflows/template-env-check.yml
@@ -12,10 +12,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Verify each template has .env.local with *_ECHO_APP_ID
+      - name: Verify each template has .env.local with *ECHO_APP_ID
         run: |
           set -e
-          echo "Checking templates for .env.local with *_ECHO_APP_ID placeholder..."
+          echo "Checking templates for .env.local with *ECHO_APP_ID placeholder..."
           failed=0
           # Iterate over immediate subdirectories of templates/
           for d in templates/*/; do
@@ -27,14 +27,14 @@ jobs:
                 failed=1
                 continue
               fi
-              if ! grep -q "*_ECHO_APP_ID" "$d/.env.local"; then
-                echo "::error file=$d::.env.local must contain the exact string *_ECHO_APP_ID"
+              if ! grep -q "*ECHO_APP_ID" "$d/.env.local"; then
+                echo "::error file=$d::.env.local must contain the exact string *ECHO_APP_ID"
                 failed=1
               fi
             fi
           done
           if [ "$failed" -ne 0 ]; then
-            echo "One or more templates failed the .env.local placeholder check"
+            echo "One or more templates failed the .env.local *ECHO_APP_ID placeholder check"
             exit 1
           fi
-          echo "All templates passed the .env.local placeholder check"
+          echo "All templates passed the .env.local *ECHO_APP_ID placeholder check"
