add tooltip and handle free tier

--- a/packages/sdk/component-registry/components.json
+++ b/packages/sdk/component-registry/components.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://ui.shadcn.com/schema.json",
-  "style": "echo",
+  "style": "new-york",
   "rsc": true,
   "tsx": true,
   "tailwind": {
@@ -11,11 +11,11 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "@/components",
+    "components": "@registry/echo/components",
     "utils": "@/lib/utils",
-    "ui": "@/components/ui",
-    "lib": "@/lib",
-    "hooks": "@/hooks"
+    "ui": "@registry/echo/components/ui",
+    "lib": "@registry/echo/lib",
+    "hooks": "@registry/echo/hooks"
   },
   "iconLibrary": "lucide"
 }
