check in oauth zod refac

--- a/packages/sdk/next/package.json
+++ b/packages/sdk/next/package.json
@@ -37,8 +37,8 @@
   "author": "Merit Systems",
   "license": "MIT",
   "dependencies": {
-    "@merit-systems/echo-typescript-sdk": "1.0.14",
-    "@merit-systems/echo-react-sdk": "1.0.29",
+    "@merit-systems/echo-typescript-sdk": "workspace:*",
+    "@merit-systems/echo-react-sdk": "workspace:*",
     "ai": "^5.0.17",
     "jwt-decode": "^4.0.0",
     "swr": "^2.3.1"
