registry with next/react switch

--- a/packages/sdk/component-registry/package.json
+++ b/packages/sdk/component-registry/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@merit-systems/echo-next-sdk": "^0.0.20",
     "@merit-systems/echo-react-sdk": "^1.0.29",
+    "@merit-systems/echo-typescript-sdk": "^1.0.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
