--- a/packages/sdk/component-registry/package.json
+++ b/packages/sdk/component-registry/package.json
@@ -10,9 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@merit-systems/echo-next-sdk": "^0.0.20",
-    "@merit-systems/echo-react-sdk": "^1.0.29",
-    "@merit-systems/echo-typescript-sdk": "^1.0.14",
+    "@merit-systems/echo-next-sdk": "workspace:*",
+    "@merit-systems/echo-react-sdk": "workspace:*",
+    "@merit-systems/echo-typescript-sdk": "workspace:*",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
@@ -43,11 +43,5 @@
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.9.2"
-  },
-  "pnpm": {
-    "overrides": {
-      "@types/react": "19.1.2",
-      "@types/react-dom": "19.1.2"
-    }
   }
 }
