--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "packageManager": "pnpm@10.11.0",
   "scripts": {
     "dev": "turbo run dev --filter=echo-control --filter=echo-server",
-    "build": "pnpm run --recursive build",
+    "build": "turbo run build",
+    "prepare": "turbo run build",
     "test:unit": "pnpm -C packages/sdk/ts run build && pnpm -r --filter=!packages/app/server run test:unit",
     "test:integration": "pnpm -C packages/tests/integration test",
     "test:all": "pnpm run test:unit && pnpm run test:integration",
