--- a/packages/app/control/package.json
+++ b/packages/app/control/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "predev": "docker-compose -f docker-local-db.yml up -d && sleep 3 && prisma generate && prisma migrate deploy",
     "dev": "next dev --turbopack",
-    "prebuild": "prisma generate && npm run generate-api-types",
+    "prebuild": "prisma generate",
     "build": "next build",
     "generate-api-types": "tsx scripts/generate-api-types.ts",
     "start": "next start",
