--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -28,6 +28,48 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
 
+    env:
+      # Database Configuration
+      DATABASE_URL: postgresql://test:test@localhost:5433/echo_integration_test
+
+      # Service URLs
+      ECHO_CONTROL_URL: http://localhost:3001
+      ECHO_DATA_SERVER_URL: http://localhost:3069
+
+      # Authentication Secrets
+      JWT_SECRET: ${{ secrets.TEST_JWT_SECRET }}
+      JWT_ISSUER: http://localhost:3001
+      JWT_AUDIENCE: echo-proxy
+
+      # Auth.js Configuration
+      AUTH_SECRET: ${{ secrets.TEST_AUTH_SECRET }}
+
+      # Integration Test JWTs
+      INTEGRATION_TEST_JWT: ${{ secrets.INTEGRATION_TEST_JWT }}
+      INTEGRATION_TEST_JWT_USER_2: ${{ secrets.INTEGRATION_TEST_JWT_USER_2 }}
+
+      # API Keys for Echo Server
+      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+      ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+
+      # OAuth Configuration
+      OAUTH_REFRESH_TOKEN_EXPIRY_SECONDS: 2592000
+      OAUTH_ACCESS_TOKEN_EXPIRY_SECONDS: 86400
+
+      # Environment Flags
+      CI: true
+      NODE_ENV: test
+      INTEGRATION_TEST_MODE: true
+
+      # Optional Stripe Configuration
+      STRIPE_SECRET_KEY: ${{ secrets.TEST_STRIPE_SECRET_KEY }}
+      STRIPE_PUBLISHABLE_KEY: ${{ secrets.TEST_STRIPE_PUBLISHABLE_KEY }}
+      STRIPE_WEBHOOK_SECRET: ${{ secrets.TEST_STRIPE_WEBHOOK_SECRET }}
+
+      # Test Configuration
+      HEADLESS: true
+      LOG_LEVEL: error
+
     services:
       postgres:
         image: postgres:15-alpine
@@ -120,34 +162,10 @@ jobs:
 
       - name: Setup Prisma schema
         working-directory: packages/app/control
-        env:
-          DATABASE_URL: postgresql://test:test@localhost:5433/echo_integration_test
         run: pnpm prisma:generate
 
       - name: Setup integration test environment
         working-directory: packages/tests/integration
-        env:
-          DATABASE_URL: postgresql://test:test@localhost:5433/echo_integration_test
-          ECHO_CONTROL_URL: http://localhost:3001
-          ECHO_DATA_SERVER_URL: http://localhost:3069
-          JWT_SECRET: ${{ secrets.TEST_JWT_SECRET }}
-          JWT_ISSUER: http://localhost:3001
-          JWT_AUDIENCE: echo-proxy
-          INTEGRATION_TEST_JWT: ${{ secrets.INTEGRATION_TEST_JWT }}
-          INTEGRATION_TEST_JWT_USER_2: ${{ secrets.INTEGRATION_TEST_JWT_USER_2 }}
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
-          OAUTH_REFRESH_TOKEN_EXPIRY_SECONDS: 2592000
-          OAUTH_ACCESS_TOKEN_EXPIRY_SECONDS: 86400
-          CI: true
-          NODE_ENV: test
-          INTEGRATION_TEST_MODE: true
-          STRIPE_SECRET_KEY: ${{ secrets.TEST_STRIPE_SECRET_KEY }}
-          STRIPE_PUBLISHABLE_KEY: ${{ secrets.TEST_STRIPE_PUBLISHABLE_KEY }}
-          STRIPE_WEBHOOK_SECRET: ${{ secrets.TEST_STRIPE_WEBHOOK_SECRET }}
-          HEADLESS: true
-          LOG_LEVEL: error
-          AUTH_SECRET: ${{ secrets.TEST_AUTH_SECRET }}
         run: |
           chmod +x scripts/setup-integration-env.sh
           pnpm run env:setup
@@ -187,6 +205,48 @@ jobs:
     timeout-minutes: 20
     needs: integration-tests
     if: github.event_name == 'push' || contains(github.event.pull_request.labels.*.name, 'run-e2e')
+
+    env:
+      # Database Configuration
+      DATABASE_URL: postgresql://test:test@postgres-test:5432/echo_integration_test
+
+      # Service URLs
+      ECHO_CONTROL_URL: http://echo-control-test:3000
+      ECHO_DATA_SERVER_URL: http://echo-data-server-test:3069
+
+      # Authentication Secrets
+      JWT_SECRET: ${{ secrets.TEST_JWT_SECRET }}
+      JWT_ISSUER: http://echo-control-test:3000
+      JWT_AUDIENCE: echo-proxy
+
+      # Auth.js Configuration
+      AUTH_SECRET: ${{ secrets.TEST_AUTH_SECRET }}
+
+      # Integration Test JWTs
+      INTEGRATION_TEST_JWT: ${{ secrets.INTEGRATION_TEST_JWT }}
+      INTEGRATION_TEST_JWT_USER_2: ${{ secrets.INTEGRATION_TEST_JWT_USER_2 }}
+
+      # API Keys for Echo Server
+      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+      ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+
+      # OAuth Configuration
+      OAUTH_REFRESH_TOKEN_EXPIRY_SECONDS: 2592000
+      OAUTH_ACCESS_TOKEN_EXPIRY_SECONDS: 86400
+
+      # Environment Flags
+      CI: true
+      NODE_ENV: test
+      INTEGRATION_TEST_MODE: true
+
+      # Optional Stripe Configuration
+      STRIPE_SECRET_KEY: ${{ secrets.TEST_STRIPE_SECRET_KEY }}
+      STRIPE_PUBLISHABLE_KEY: ${{ secrets.TEST_STRIPE_PUBLISHABLE_KEY }}
+      STRIPE_WEBHOOK_SECRET: ${{ secrets.TEST_STRIPE_WEBHOOK_SECRET }}
+
+      # Test Configuration
+      HEADLESS: true
+      LOG_LEVEL: error
 
     steps:
       - name: Checkout code
