skip env validation during build

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -61,6 +61,8 @@ jobs:
       NODE_ENV: test
       INTEGRATION_TEST_MODE: true
 
+      NEXT_PUBLIC_ECHO_APP_ID: 74d9c979-e036-4e43-904f-32d214b361fc
+
       # Optional Stripe Configuration
       STRIPE_SECRET_KEY: ${{ secrets.TEST_STRIPE_SECRET_KEY }}
       STRIPE_PUBLISHABLE_KEY: ${{ secrets.TEST_STRIPE_PUBLISHABLE_KEY }}
@@ -129,6 +131,9 @@ jobs:
           # Integration Test JWTs
           INTEGRATION_TEST_JWT=${{ secrets.INTEGRATION_TEST_JWT }}
           INTEGRATION_TEST_JWT_USER_2=${{ secrets.INTEGRATION_TEST_JWT_USER_2 }}
+
+          # Next.js Configuration
+          NEXT_PUBLIC_ECHO_APP_ID=74d9c979-e036-4e43-904f-32d214b361fc
 
           # API Keys for Echo Server
           OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
@@ -243,6 +248,8 @@ jobs:
       STRIPE_SECRET_KEY: ${{ secrets.TEST_STRIPE_SECRET_KEY }}
       STRIPE_PUBLISHABLE_KEY: ${{ secrets.TEST_STRIPE_PUBLISHABLE_KEY }}
       STRIPE_WEBHOOK_SECRET: ${{ secrets.TEST_STRIPE_WEBHOOK_SECRET }}
+
+      NEXT_PUBLIC_ECHO_APP_ID: 74d9c979-e036-4e43-904f-32d214b361fc
 
       # Test Configuration
       HEADLESS: true
