--- a/templates/next-chat/package.json
+++ b/templates/next-chat/package.json
@@ -12,6 +12,7 @@
     "@ai-sdk/openai": "^2.0.26",
     "@ai-sdk/react": "^2.0.44",
     "@merit-systems/echo-next-sdk": "^0.0.20",
+    "@merit-systems/echo-react-sdk": "^1.0.29",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-hover-card": "^1.1.15",
