--- a/.github/workflows/test-publish.yml
+++ b/.github/workflows/test-publish.yml
@@ -68,6 +68,8 @@ jobs:
       NODE_ENV: test
       INTEGRATION_TEST_MODE: true
 
+      NEXT_PUBLIC_ECHO_APP_ID: 74d9c979-e036-4e43-904f-32d214b361fc
+
       # Optional Stripe Configuration
       STRIPE_SECRET_KEY: ${{ secrets.TEST_STRIPE_SECRET_KEY }}
       STRIPE_PUBLISHABLE_KEY: ${{ secrets.TEST_STRIPE_PUBLISHABLE_KEY }}
