--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "packageManager": "pnpm@10.11.0",
   "scripts": {
     "dev": "turbo run dev --filter=echo-control --filter=echo-server",
-    "build": "SKIP_ENV_VALIDATION=true turbo run build --env-mode=loose --filter=!echo-next-template --filter=!echo-vite-template",
-    "prepare": "SKIP_ENV_VALIDATION=true turbo run build --env-mode=loose --filter=!echo-next-template --filter=!echo-vite-template",
+    "build": "SKIP_ENV_VALIDATION=true turbo run build --env-mode=loose",
+    "prepare": "SKIP_ENV_VALIDATION=true turbo run build --env-mode=loose",
     "test:unit": "pnpm -C packages/sdk/ts run build && pnpm -r --filter=!packages/app/server run test:unit",
     "test:integration": "pnpm -C packages/tests/integration test",
     "test:all": "pnpm run test:unit && pnpm run test:integration",
