--- a/packages/app/control/package.json
+++ b/packages/app/control/package.json
@@ -69,6 +69,7 @@
     "@trpc/react-query": "^11.4.4",
     "@trpc/server": "^11.4.4",
     "@types/mdx": "^2.0.13",
+    "@upstash/qstash": "^2.8.3",
     "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^0.25.1",
     "@vercel/otel": "^1.13.0",
