--- a/packages/sdk/examples/next/package.json
+++ b/packages/sdk/examples/next/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "echo-next-template",
+  "name": "echo-next-example",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,11 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^2.0.16",
-    "@ai-sdk/react": "^2.0.17",
-    "@ai-sdk/rsc": "^1.0.18",
+    "@ai-sdk/react": "^2.0.47",
     "@merit-systems/echo-next-sdk": "workspace:*",
-    "ai": "^5.0.17",
+    "ai": "^5.0.47",
     "next": "15.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0"
