--- a/packages/app/control/package.json
+++ b/packages/app/control/package.json
@@ -128,6 +128,7 @@
     "@types/react-dom": "19.1.7",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "husky": "^9.0.0",
     "prettier": "^3.6.2",
     "tsx": "^4.20.3",
