update all the templates to be strict about ai-sdk versions

--- a/templates/next/package.json
+++ b/templates/next/package.json
@@ -6,13 +6,30 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postinstall": "npm dedupe || true"
   },
   "dependencies": {
     "@merit-systems/echo-next-sdk": "^0.0.20",
+    "ai": "5.0.19",
+    "@ai-sdk/react": "2.0.17",
+    "@ai-sdk/openai": "2.0.16",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
+  },
+  "overrides": {
+    "ai": "5.0.19",
+    "@ai-sdk/react": "2.0.17",
+    "@ai-sdk/openai": "2.0.16",
+    "@merit-systems/echo-next-sdk": {
+      "ai": "5.0.19",
+      "@ai-sdk/openai": "2.0.16"
+    },
+    "@merit-systems/echo-react-sdk": {
+      "ai": "5.0.19",
+      "@ai-sdk/react": "2.0.17"
+    }
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
