--- a/templates/next-image/package.json
+++ b/templates/next-image/package.json
@@ -6,16 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "npm dedupe || true"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^2.0.16",
+    "@ai-sdk/openai": "2.0.16",
     "@merit-systems/echo-next-sdk": "0.0.20",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
-    "ai": "^5.0.40",
+    "ai": "5.0.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.263.1",
@@ -37,5 +38,16 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
+  },
+  "overrides": {
+    "ai": "5.0.19",
+    "@ai-sdk/openai": "2.0.16",
+    "@merit-systems/echo-next-sdk": {
+      "ai": "5.0.19",
+      "@ai-sdk/openai": "2.0.16"
+    },
+    "@merit-systems/echo-react-sdk": {
+      "ai": "5.0.19"
+    }
   }
 }
