--- a/templates/react-image/package.json
+++ b/templates/react-image/package.json
@@ -7,14 +7,24 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "postinstall": "npm dedupe || true",
     "preview": "vite preview"
   },
   "dependencies": {
     "@merit-systems/echo-react-sdk": "^1.0.28",
-    "ai": "^5.0.20",
+    "ai": "5.0.19",
+    "@ai-sdk/react": "2.0.17",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "use-sync-external-store": "^1.5.0"
+  },
+  "overrides": {
+    "ai": "5.0.19",
+    "@ai-sdk/react": "2.0.17",
+    "@merit-systems/echo-react-sdk": {
+      "ai": "5.0.19",
+      "@ai-sdk/react": "2.0.17"
+    }
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
