--- a/templates/next-chat/package.json
+++ b/templates/next-chat/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build --turbopack", 
     "start": "next start",
-    "lint": "biome check --write",
-    "postinstall": "npm dedupe || true"
+    "lint": "biome check --write"
   },
   "dependencies": {
     "@ai-sdk/react": "2.0.17",
     "@merit-systems/echo-next-sdk": "^0.0.22",
     "@merit-systems/echo-react-sdk": "^1.0.31",
+    "ai": "5.0.47",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-hover-card": "^1.1.15",
@@ -22,8 +22,6 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
-    "ai": "5.0.19",
-    "@ai-sdk/openai": "2.0.16",
     "autonumeric": "^4.10.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -50,18 +48,5 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
-  },
-  "overrides": {
-    "ai": "5.0.19",
-    "@ai-sdk/react": "2.0.17",
-    "@ai-sdk/openai": "2.0.16",
-    "@merit-systems/echo-react-sdk": {
-      "ai": "5.0.19",
-      "@ai-sdk/react": "2.0.17"
-    },
-    "@merit-systems/echo-next-sdk": {
-      "ai": "5.0.19",
-      "@ai-sdk/openai": "2.0.16"
-    }
   }
 }
